--- a/Rosovina/Modules/Search/FilterView.xib
+++ b/Rosovina/Modules/Search/FilterView.xib
@@ -24,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9sa-J2-UAE">
-                    <rect key="frame" x="16" y="126" width="361" height="600"/>
+                    <rect key="frame" x="16" y="166" width="361" height="520"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fCG-nk-iDl">
                             <rect key="frame" x="24.000000000000004" y="16" width="44.333333333333343" height="21.666666666666671"/>
@@ -33,16 +33,16 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="SwS-yt-3FH">
-                            <rect key="frame" x="269.66666666666669" y="14.666666666666655" width="75.333333333333314" height="24.333333333333329"/>
+                            <rect key="frame" x="269.66666666666669" y="15" width="75.333333333333314" height="24"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reset" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Wl-6s-lpA">
-                                    <rect key="frame" x="0.0" y="2.6666666666666856" width="41.333333333333336" height="19.333333333333332"/>
+                                    <rect key="frame" x="0.0" y="2.3333333333333428" width="41.333333333333336" height="19.333333333333332"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hS3-1R-j8c">
-                                    <rect key="frame" x="51.333333333333314" y="0.33333333333334281" width="24" height="24"/>
+                                    <rect key="frame" x="51.333333333333314" y="0.0" width="24" height="24"/>
                                     <constraints>
                                         <constraint firstAttribute="width" constant="24" id="at9-r3-qcL"/>
                                         <constraint firstAttribute="height" constant="24" id="rql-en-Cp5"/>
@@ -72,7 +72,7 @@
                                     </connections>
                                 </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Between: 600 SAR - 3000 SAR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="job-SV-NWy">
-                                    <rect key="frame" x="0.0" y="71.333333333333343" width="197.66666666666666" height="17"/>
+                                    <rect key="frame" x="0.0" y="71.333333333333314" width="197.66666666666666" height="17"/>
                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
                                     <color key="textColor" name="AccentColor"/>
                                     <nil key="highlightedColor"/>
@@ -84,14 +84,14 @@
                             </constraints>
                         </stackView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LLH-as-PgX">
-                            <rect key="frame" x="24" y="157.33333333333329" width="313" height="360.66666666666674"/>
+                            <rect key="frame" x="24" y="157.33333333333331" width="313" height="280"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="360.67000000000002" id="SZf-rV-g1n"/>
+                                <constraint firstAttribute="height" constant="280" id="SZf-rV-g1n"/>
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cxU-Z6-Nmy">
-                            <rect key="frame" x="24" y="536" width="313" height="56"/>
+                            <rect key="frame" x="24" y="455.33333333333337" width="313" height="56"/>
                             <color key="backgroundColor" red="0.1764705882" green="0.19215686269999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="56" id="JqI-Bs-kM8"/>
@@ -114,8 +114,7 @@
                         <constraint firstItem="fCG-nk-iDl" firstAttribute="top" secondItem="9sa-J2-UAE" secondAttribute="top" constant="16" id="Gxg-9M-3ne"/>
                         <constraint firstAttribute="trailing" secondItem="rFv-8Y-7wT" secondAttribute="trailing" constant="24" id="Ipr-86-qZr"/>
                         <constraint firstAttribute="trailing" secondItem="cxU-Z6-Nmy" secondAttribute="trailing" constant="24" id="RQd-Iy-1Lq"/>
-                        <constraint firstAttribute="height" constant="600" id="V6k-CY-ri9"/>
-                        <constraint firstAttribute="bottom" secondItem="cxU-Z6-Nmy" secondAttribute="bottom" constant="8" id="aG8-J5-lxN"/>
+                        <constraint firstAttribute="height" constant="520" id="V6k-CY-ri9"/>
                         <constraint firstItem="LLH-as-PgX" firstAttribute="top" secondItem="rFv-8Y-7wT" secondAttribute="bottom" constant="18" id="huZ-5U-lAA"/>
                         <constraint firstItem="LLH-as-PgX" firstAttribute="leading" secondItem="9sa-J2-UAE" secondAttribute="leading" constant="24" id="jE9-lM-HvH"/>
                         <constraint firstItem="fCG-nk-iDl" firstAttribute="leading" secondItem="9sa-J2-UAE" secondAttribute="leading" constant="24" id="kLH-o0-IUW"/>
