--- a/Rosovina/Modules/Profile/Views/ProfileView.xib
+++ b/Rosovina/Modules/Profile/Views/ProfileView.xib
@@ -112,7 +112,7 @@
                             </subviews>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="35" translatesAutoresizingMaskIntoConstraints="NO" id="b3p-IY-DFb">
-                            <rect key="frame" x="8" y="138.66666666666663" width="313" height="378"/>
+                            <rect key="frame" x="8" y="138.66666666666663" width="313" height="437"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zAm-1l-H70">
                                     <rect key="frame" x="0.0" y="0.0" width="313" height="24"/>
@@ -266,11 +266,11 @@
                                         <constraint firstItem="aXn-i5-ZYl" firstAttribute="centerY" secondItem="cB3-xb-EkA" secondAttribute="centerY" id="zKJ-Ru-6Bp"/>
                                     </constraints>
                                 </view>
-                                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1CK-at-L5c">
-                                    <rect key="frame" x="0.0" y="218.33333333333334" width="313" height="24"/>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1CK-at-L5c">
+                                    <rect key="frame" x="0.0" y="236.00000000000003" width="313" height="23.999999999999972"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="BHr-Kf-rTr">
-                                            <rect key="frame" x="8" y="1.6666666666666856" width="84.333333333333329" height="21"/>
+                                            <rect key="frame" x="8" y="1.3333333333333144" width="84.333333333333329" height="21"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Money" translatesAutoresizingMaskIntoConstraints="NO" id="25o-Gw-XwM">
                                                     <rect key="frame" x="0.0" y="0.0" width="18" height="21"/>
@@ -305,10 +305,10 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3Y9-5o-zbN">
-                                    <rect key="frame" x="0.0" y="236.00000000000003" width="313" height="23.999999999999972"/>
+                                    <rect key="frame" x="0.0" y="295" width="313" height="24"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="r4b-Xb-Mv6">
-                                            <rect key="frame" x="8" y="1.3333333333333144" width="97.333333333333329" height="21"/>
+                                            <rect key="frame" x="8" y="1.3333333333333712" width="97.333333333333329" height="21"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favorite" translatesAutoresizingMaskIntoConstraints="NO" id="Gmw-UX-akl">
                                                     <rect key="frame" x="0.0" y="0.0" width="18" height="21"/>
@@ -343,7 +343,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CQE-EB-jE5">
-                                    <rect key="frame" x="0.0" y="295" width="313" height="24"/>
+                                    <rect key="frame" x="0.0" y="354" width="313" height="24"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="PQf-uz-4Wc">
                                             <rect key="frame" x="7.9999999999999929" y="1.3333333333333712" width="121.33333333333331" height="21"/>
@@ -381,7 +381,7 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dnt-V4-Ea0">
-                                    <rect key="frame" x="0.0" y="354" width="313" height="24"/>
+                                    <rect key="frame" x="0.0" y="413" width="313" height="24"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="CgX-bI-hNJ">
                                             <rect key="frame" x="8" y="1.3333333333333712" width="94" height="21"/>
