--- a/Rosovina/Modules/Checkout/Views/CheckoutView.xib
+++ b/Rosovina/Modules/Checkout/Views/CheckoutView.xib
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -30,6 +29,7 @@
                 <outlet property="recipientNameView" destination="7PP-mE-z6F" id="ctF-2E-H1I"/>
                 <outlet property="recipientPhoneTextField" destination="vK9-qx-KFy" id="Gw0-0U-Cne"/>
                 <outlet property="recipientPhoneView" destination="40V-wH-dpz" id="MSi-MT-sPw"/>
+                <outlet property="recipientView" destination="vXG-GG-yzG" id="7AM-Fx-8cA"/>
                 <outlet property="selectedAddressContent" destination="3OZ-py-vdz" id="PIY-mV-e7i"/>
                 <outlet property="selectedAddressName" destination="3T1-m2-rNa" id="AgG-R9-PuO"/>
                 <outlet property="selectedAddressPhone" destination="Nts-XS-hg1" id="tOp-Ss-mZ9"/>
@@ -715,7 +715,7 @@ card payment terms &amp; conditions</string>
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
         <systemColor name="systemGray5Color">
-            <color red="0.8980392157" green="0.8980392157" blue="0.91764705879999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
