--- a/Rosovina/Modules/Checkout/Views/SelectAddressView.xib
+++ b/Rosovina/Modules/Checkout/Views/SelectAddressView.xib
@@ -41,15 +41,32 @@
                             <rect key="frame" x="16" y="51.333333333333314" width="303" height="582.66666666666674"/>
                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tmr-yi-9Mt">
+                            <rect key="frame" x="276" y="8" width="43" height="35"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="43" id="Eyy-Q0-onh"/>
+                                <constraint firstAttribute="height" constant="35" id="ctb-Hp-4N3"/>
+                            </constraints>
+                            <color key="tintColor" red="0.1764705882" green="0.19215686269999999" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="xmark.square" catalog="system">
+                                <preferredSymbolConfiguration key="preferredSymbolConfiguration" scale="large"/>
+                            </state>
+                            <connections>
+                                <action selector="closeClicked:" destination="-1" eventType="touchUpInside" id="5ca-4t-4Dz"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="qYf-09-EkE" firstAttribute="leading" secondItem="YtD-ZY-hsC" secondAttribute="leading" constant="16" id="3HO-zk-M4E"/>
                         <constraint firstAttribute="width" constant="335" id="Duy-K7-fha"/>
+                        <constraint firstAttribute="trailing" secondItem="Tmr-yi-9Mt" secondAttribute="trailing" constant="16" id="DwN-wT-hDW"/>
                         <constraint firstAttribute="bottom" secondItem="yh8-E0-xVz" secondAttribute="bottom" constant="16" id="JSz-o0-DKN"/>
                         <constraint firstItem="yh8-E0-xVz" firstAttribute="leading" secondItem="YtD-ZY-hsC" secondAttribute="leading" constant="16" id="Jop-hJ-6Bq"/>
                         <constraint firstItem="qYf-09-EkE" firstAttribute="top" secondItem="YtD-ZY-hsC" secondAttribute="top" constant="16" id="M0t-h8-uuv"/>
                         <constraint firstItem="yh8-E0-xVz" firstAttribute="top" secondItem="qYf-09-EkE" secondAttribute="bottom" constant="16" id="Yjc-LS-Dfc"/>
+                        <constraint firstItem="Tmr-yi-9Mt" firstAttribute="top" secondItem="YtD-ZY-hsC" secondAttribute="top" constant="8" id="bl1-1E-HzJ"/>
                         <constraint firstAttribute="trailing" secondItem="yh8-E0-xVz" secondAttribute="trailing" constant="16" id="jTR-TH-xyb"/>
                         <constraint firstAttribute="height" constant="650" id="z6t-vM-Ntf"/>
                     </constraints>
@@ -74,6 +91,7 @@
         </view>
     </objects>
     <resources>
+        <image name="xmark.square" catalog="system" width="128" height="114"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
