--- a/Rosovina/Modules/Profile/Views/ContactusView.xib
+++ b/Rosovina/Modules/Profile/Views/ContactusView.xib
@@ -75,7 +75,7 @@
                     </connections>
                 </button>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="17" translatesAutoresizingMaskIntoConstraints="NO" id="W5l-pj-gGe">
-                    <rect key="frame" x="101" y="483" width="191" height="35"/>
+                    <rect key="frame" x="75" y="483" width="243" height="35"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hsu-dz-kBc">
                             <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
@@ -125,6 +125,18 @@
                                 <action selector="tiktok:" destination="-1" eventType="touchUpInside" id="V8V-R4-yoZ"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jIL-Nn-0XW">
+                            <rect key="frame" x="208" y="0.0" width="35" height="35"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="35" id="Jy8-VY-ODZ"/>
+                                <constraint firstAttribute="height" constant="35" id="hac-NR-fjc"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="whatsapp"/>
+                            <connections>
+                                <action selector="whatsapp:" destination="-1" eventType="touchUpInside" id="Jy2-03-Bu5"/>
+                            </connections>
+                        </button>
                     </subviews>
                 </stackView>
             </subviews>
@@ -151,6 +163,7 @@
         <image name="logo" width="2048" height="2048"/>
         <image name="snapchat" width="512" height="512"/>
         <image name="tiktok" width="512" height="512"/>
+        <image name="whatsapp" width="512" height="512"/>
         <namedColor name="AccentColor">
             <color red="0.17599999904632568" green="0.19200000166893005" blue="0.25900000333786011" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
