--- a/Rosovina/Modules/Checkout/Views/CheckoutView.xib
+++ b/Rosovina/Modules/Checkout/Views/CheckoutView.xib
@@ -140,7 +140,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="223" translatesAutoresizingMaskIntoConstraints="NO" id="YDC-lz-pJw">
                                                     <rect key="frame" x="0.0" y="0.0" width="345" height="29"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saved Recipients &amp; Addresses" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2a-Lp-gYF">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Saved Addresses" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O2a-Lp-gYF">
                                                             <rect key="frame" x="0.0" y="0.0" width="345" height="29"/>
                                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                                             <color key="textColor" red="0.21176470589999999" green="0.2156862745" blue="0.29411764709999999" alpha="1" colorSpace="calibratedRGB"/>
@@ -497,6 +497,14 @@
                                                                 <constraint firstItem="9SW-Ag-H3I" firstAttribute="centerY" secondItem="p7i-tM-hTK" secondAttribute="centerY" id="HuK-vF-5No"/>
                                                                 <constraint firstAttribute="width" constant="95" id="ulx-6Y-xXC"/>
                                                                 <constraint firstAttribute="height" constant="95" id="yOZ-EB-OFY"/>
+                                                            </constraints>
+                                                        </view>
+                                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nqf-cg-Aix">
+                                                            <rect key="frame" x="111" y="0.0" width="250" height="95"/>
+                                                            <color key="backgroundColor" red="0.086274509803921567" green="0.082352941176470587" blue="0.082352941176470587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="250" id="JDc-3c-NSX"/>
+                                                                <constraint firstAttribute="height" constant="95" id="pd9-UO-B24"/>
                                                             </constraints>
                                                         </view>
                                                     </subviews>
