--- a/Rosovina/Modules/Onboarding/OnboardingViewController.xib
+++ b/Rosovina/Modules/Onboarding/OnboardingViewController.xib
@@ -59,7 +59,7 @@
                     </subviews>
                 </stackView>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="29" translatesAutoresizingMaskIntoConstraints="NO" id="MRu-cb-czh">
-                    <rect key="frame" x="16" y="493.99999999999994" width="345.66666666666669" height="163.33333333333331"/>
+                    <rect key="frame" x="16" y="494" width="297.33333333333331" height="150"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gXs-Qw-6zd">
                             <rect key="frame" x="0.0" y="0.0" width="126" height="28.666666666666668"/>
@@ -68,19 +68,19 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="q9E-Qm-OPn">
-                            <rect key="frame" x="0.0" y="57.666666666666636" width="345.66666666666669" height="105.66666666666669"/>
+                            <rect key="frame" x="0.0" y="57.666666666666622" width="297.33333333333331" height="92.333333333333314"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ygW-VK-KLC">
-                                    <rect key="frame" x="0.0" y="0.0" width="169" height="50.333333333333336"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="149.33333333333334" height="44.333333333333336"/>
                                     <string key="text">Rosovina
 flowers &amp; gift store</string>
-                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="42"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="37"/>
                                     <color key="textColor" red="0.21176470588235294" green="0.21568627450980393" blue="0.29411764705882354" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="flowers &amp; gift store" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w1c-6V-09t">
-                                    <rect key="frame" x="0.0" y="55.333333333333371" width="345.66666666666669" height="50.333333333333343"/>
-                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="42"/>
+                                    <rect key="frame" x="0.0" y="49.333333333333371" width="297.33333333333331" height="43"/>
+                                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="36"/>
                                     <color key="textColor" red="0.28235294119999998" green="0.3921568627" blue="0.47843137250000001" alpha="1" colorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
